# libqtappfw

./: .gitignore  .gitreview  .vimrc  CMakeLists.txt  bluetooth.cpp  bluetooth.h  callmessage.cpp  callmessage.h  eventmessage.h  mediaplayer.cpp  mediaplayer.h  mediaplayermessage.h  meson.build  message.cpp  message.h  messageengine.cpp  messageengine.h  messageenginefactory.cpp  messagefactory.h  pbap.cpp  pbap.h  pbapmessage.h  qtappfw.pc.in  responsemessage.cpp  responsemessage.h  utils.h  weather.h
applauncher/: AppLauncherClient.cpp  AppLauncherClient.h  AppLauncherGrpcClient.cpp  AppLauncherGrpcClient.h  meson.build
applauncher/protos/: applauncher.proto
bluetooth/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  bluetootheventhandler.cpp  bluetootheventhandler.h  bluetoothmessage.cpp  bluetoothmessage.h  bluetoothmodel.cpp  bluetoothmodel.h  meson.build  qtappfw-bt.pc.in
core/: CMakeLists.txt  callmessage.cpp  eventmessage.cpp  message.h  messageengine.h  messageenginefactory.h  messagefactory.cpp  qtappfw-core.pc.in  responsemessage.cpp  responsemessage.h
docs/: CMakeLists.txt  Doxyfile.in
hvac/: CMakeLists.txt  hvac.cpp  hvac.h  hvacmessage.cpp  hvacmessage.h  meson.build  qtappfw-hvac.pc.in
map/: CMakeLists.txt  map.cpp  map.h  mapmessage.cpp  mapmessage.h  meson.build  qtappfw-bt-map.pc.in
mediaplayer/: CMakeLists.txt  MediaplayerBackend.cpp  MediaplayerBackend.h  MediaplayerBluezBackend.cpp  MediaplayerBluezBackend.h  MediaplayerMpdBackend.cpp  MediaplayerMpdBackend.h  MpdEventHandler.cpp  MpdEventHandler.h  mediaplayer.cpp  mediaplayer.h  mediaplayermessage.cpp  meson.build  qtappfw-mediaplayer.pc.in
navigation/: CMakeLists.txt  meson.build  navigation.cpp  navigation.h  navigationmessage.cpp  navigationmessage.h  qtappfw-navigation.pc.in
network/: CMakeLists.txt  abstractnetworkmodel.cpp  abstractnetworkmodel.h  connectionprofile.cpp  connectionprofile.h  meson.build  network.cpp  network.h  networkadapter.cpp  networkadapter.h  networkeventhandler.cpp  networkeventhandler.h  networkmessage.cpp  networkmessage.h  qtappfw-network.pc.in  wifiadapter.cpp  wifiadapter.h  wifinetworkmodel.cpp  wifinetworkmodel.h  wiredadapter.cpp  wiredadapter.h  wirednetworkmodel.cpp  wirednetworkmodel.h
pbap/: CMakeLists.txt  meson.build  pbap.cpp  pbap.h  pbapmessage.cpp  pbapmessage.h  qtappfw-bt-pbap.pc.in
radio/: CMakeLists.txt  RadioClient.cpp  RadioClient.h  RadioGrpcClient.cpp  RadioGrpcClient.h  meson.build  qtappfw-radio.pc.in  radio.cpp  radio.h  radiomessage.cpp  radiomessage.h
radio/protos/: radio.proto
signal-composer/: CMakeLists.txt  qtappfw-signal-composer.pc.in  signalcomposer.cpp  signalcomposer.h  signalcomposermessage.cpp  signalcomposermessage.h
telephony/: CMakeLists.txt  meson.build  qtappfw-phone.pc.in  telephony.cpp  telephony.h  telephonymessage.cpp  telephonymessage.h
vehicle-signals/: CMakeLists.txt  meson.build  qtappfw-vehicle-signals.pc.in  vehiclesignals.cpp  vehiclesignals.h
voice/: CMakeLists.txt  qtappfw-voice.pc.in  voice.cpp  voice.h  voiceagentmodel.cpp  voiceagentmodel.h  voiceagentprofile.cpp  voiceagentprofile.h  voiceagentregistry.cpp  voiceagentregistry.h  voicemessage.cpp  voicemessage.h
voice-capabilities/: CMakeLists.txt  guimetadata.cpp  guimetadata.h  guimetadatamessage.cpp  guimetadatamessage.h  qtappfw-voice-metadata.pc.in
weather/: CMakeLists.txt  meson.build  qtappfw-weather.pc.in  weather.cpp  weather.h  weathermessage.cpp  weathermessage.h
